copy some getting started code and run it