@@ -12,6 +12,8 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
@@ -22,4 +24,8 @@ dependencies {
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ['--add-opens', 'java.base/java.nio=ALL-UNNAMED']
 }
